BIGTOP-4226: Support soft deletion in Chatbot (#71)